fix: social icons contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,7 +54,7 @@
     --primary: 224 81% 49%;
     --primary-foreground: 0 0% 100%;
     --secondary: 42 100% 60%;
-    --secondary-foreground: 0 0% 100%;
+    --secondary-foreground: 20 14.3% 4.1%;
     --muted: 12 6.5% 15.1%;
     --muted-foreground: 24 5.4% 63.9%;
     --accent: 12 6.5% 15.1%;
